<resources>
    <string name="app_name">Dino Pedia</string>
    <string-array name="family_name">
        <item>Theropoda</item>
        <item>Sauropoda</item>
        <item>Ornithopoda</item>
        <item>Ankylosauridae</item>
        <item>Ceratopsidae</item>
        <item>Stegosauria</item>
        <item>Oviraptoridae</item>
        <item>Ornithomimidae</item>
    </string-array>
    <string-array name="family_descriptions">
        <item>Theropoda adalah kelompok dinosaurus karnivora yang memiliki ciri-ciri seperti cakar tajam, gigi yang tajam, dan tubuh yang aerodinamis. Mereka adalah pemangsa puncak di ekosistem prasejarah.</item>
        <item>Sauropoda adalah kelompok dinosaurus herbivora bertubuh besar yang memiliki leher panjang dan ekor panjang. Mereka merupakan hewan darat terbesar yang pernah hidup di Bumi.</item>
        <item>Ornithopoda adalah kelompok dinosaurus herbivora dengan bentuk tubuh yang mirip burung dan gigi yang sesuai untuk mengunyah tanaman.</item>
        <item>Ankylosauridae adalah kelompok dinosaurus herbivora yang memiliki tubuh dilindungi oleh lapisan tulang atau perisai.</item>
        <item>Ceratopsidae adalah kelompok dinosaurus herbivora yang memiliki tanduk dan perisai di kepala.</item>
        <item>Stegosauria adalah kelompok dinosaurus herbivora yang memiliki cakar dan piring tulang di punggung.</item>
        <item>Oviraptoridae adalah kelompok dinosaurus omnivora atau herbivora dengan ciri khusus di kepala.</item>
        <item>Ornithomimidae adalah kelompok dinosaurus herbivora yang memiliki tubuh ringan dan panjang seperti burung.</item>
    </string-array>
    <string-array name="dino_image">
        <item>@drawable/dino1</item>
        <item>@drawable/dino2</item>
        <item>@drawable/dino3</item>
        <item>@drawable/dino4</item>
        <item>@drawable/dino5</item>
        <item>@drawable/dino6</item>
        <item>@drawable/dino7</item>
        <item>@drawable/dino8</item>
        <item>@drawable/dino9</item>
        <item>@drawable/dino10</item>
        <item>@drawable/dino11</item>
        <item>@drawable/dino12</item>
        <item>@drawable/dino13</item>
        <item>@drawable/dino14</item>
        <item>@drawable/dino15</item>
        <item>@drawable/dino16</item>
    </string-array>
    <string-array name="dinosaurs_name">
        <item>Tyrannosaurus rex</item>
        <item>Velociraptor</item>
        <item>Brachiosaurus</item>
        <item>Diplodocus</item>
        <item>Iguanodon</item>
        <item>Parasaurolophus</item>
        <item>Ankylosaurus</item>
        <item>Euoplocephalus</item>
        <item>Triceratops</item>
        <item>Styracosaurus</item>
        <item>Stegosaurus</item>
        <item>Kentrosaurus</item>
        <item>Oviraptor</item>
        <item>Citipati</item>
        <item>Gallimimus</item>
        <item>Struthiomimus</item>
    </string-array>
    <string-array name="dinosaurs_desc">
        <item>Tyrannosaurus rex adalah salah satu predator terbesar yang pernah hidup di Bumi, dengan gigi yang besar dan rahang yang kuat.</item>
        <item>Velociraptor adalah dinosaurus kecil yang cerdas dan dikenal karena kecepatan dan cakar tajamnya.</item>
        <item>Brachiosaurus adalah dinosaurus besar berleher panjang dengan kepala besar dan kaki panjang.</item>
        <item>Diplodocus adalah dinosaurus sauropoda yang panjang dengan ekor dan leher yang sangat panjang.</item>
        <item> Iguanodon adalah dinosaurus besar dengan cakar di depan kaki yang digunakan untuk meraih makanan.</item>
        <item>Parasaurolophus adalah dinosaurus berleher panjang dengan semacam tabung di atas kepala.</item>
        <item>Ankylosaurus adalah dinosaurus berlapis baju besi dengan punggung yang dilindungi oleh lempengan tulang.</item>
        <item>Euoplocephalus adalah dinosaurus ankylosauridae yang memiliki berbagai perlindungan tulang di bagian tubuhnya.</item>
        <item>Triceratops adalah dinosaurus bercula tiga dengan tanduk besar di kepala dan lempeng tulang di belakangnya.</item>
        <item> Styracosaurus adalah dinosaurus berbertanduk yang memiliki tanduk besar di kepala dan lempeng tulang yang menonjol.</item>
        <item>Stegosaurus adalah dinosaurus berlapis baju besi dengan punggung yang dilindungi oleh lempengan tulang dan punuk yang tajam di ekor.</item>
        <item>Kentrosaurus adalah dinosaurus stegosauria kecil dengan punggung yang dilindungi oleh deretan besar duri.</item>
        <item>Oviraptor adalah dinosaurus kecil yang dikenal dengan paruh yang mirip burung dan kemungkinan cenderung memakan telur dinosaurus lain.</item>
        <item>Citipati adalah dinosaurus yang mirip dengan Oviraptor, dengan paruh khas yang kemungkinan digunakan untuk mencari makanan.</item>
        <item>Gallimimus adalah dinosaurus yang berlari cepat dan memiliki tubuh yang ringan dan ramping.</item>
        <item>Struthiomimus adalah salah satu anggota keluarga Ornithomimidae yang hidup pada periode Kapur Akhir.</item>
    </string-array>
    <string-array name="dinosaurs_carac">
        <item>Raksasa dengan kepala besar, gigi tajam, dan lengan pendek.</item>
        <item>Kecil, berbulu, dengan cakar tajam di kaki.</item>
        <item>Tubuh besar dengan leher panjang yang memungkinkannya mencapai daun-daun tinggi.</item>
        <item>Tubuh panjang dengan ekor yang sangat panjang dan leher yang relatif lebih pendek.</item>
        <item>Tubuh besar dengan kaki yang kuat dan cakar di depan kaki.</item>
        <item>Tubuh besar dengan leher panjang dan tabung di atas kepala yang mungkin digunakan untuk mengeluarkan suara.</item>
        <item>Tubuh rendah dengan punggung dilindungi oleh lempengan tulang dan ekor berat dengan bulu di ujungnya.</item>
        <item>Tubuh rendah dengan punggung dilindungi oleh lempengan tulang dan bola-baja di ujung ekor.</item>
        <item>Tubuh besar dengan tanduk besar di kepala dan lempeng tulang di belakang.</item>
        <item>Tubuh besar dengan tanduk besar di kepala dan lempeng tulang yang mencolok di bagian belakang.</item>
        <item>Tubuh rendah dengan punggung dilindungi oleh lempengan tulang dan punuk di ekor yang mungkin digunakan sebagai senjata.</item>
        <item>Tubuh kecil dengan punggung dilindungi oleh deretan besar duri dan punuk di ekor.</item>
        <item>Tubuh kecil dengan paruh khas yang mungkin digunakan untuk mencari makanan.</item>
        <item>Tubuh kecil dengan paruh yang mirip burung dan cakar yang kuat di kaki.</item>
        <item>Tubuh ringan dengan kaki panjang yang memungkinkannya berlari dengan cepat.</item>
        <item>Tubuh ramping dengan kaki panjang yang cocok untuk berlari cepat,Kepala relatif besar dengan rahang yang panjang.</item>
    </string-array>
    <string-array name="dinosaurs_cel">
        <item>Theropoda</item>
        <item>Theropoda</item>
        <item>Sauropoda</item>
        <item>Sauropoda</item>
        <item>Ornithopoda</item>
        <item>Ornithopoda</item>
        <item>Ankylosauridae</item>
        <item>Ankylosauridae</item>
        <item>Ceratopsidae</item>
        <item>Ceratopsidae</item>
        <item>Stegosauria</item>
        <item>Stegosauria</item>
        <item>Oviraptoridae</item>
        <item>Oviraptoridae</item>
        <item>Ornithomimidae</item>
        <item>Ornithomimidae</item>
    </string-array>
    <string-array name="dinosaurs_habit">
        <item>Daratan datar dan hutan</item>
        <item>Hutan dan padang rumput</item>
        <item>Padang rumput dan hutan berair</item>
        <item>Padang rumput dan dataran luas</item>
        <item> Hutan dan daerah bersemak</item>
        <item>Daerah basah seperti dataran banjir</item>
        <item>Hutan dan daerah bersemak</item>
        <item>Daerah bersemak dan padang rumput</item>
        <item>Daerah bersemak dan hutan</item>
        <item>Padang rumput dan hutan bersemak</item>
        <item> Daerah bersemak dan hutan</item>
        <item>Padang rumput dan hutan bersemak</item>
        <item>Hutan dan daerah bersemak</item>
        <item>Hutan dan daerah bersemak</item>
        <item>Padang rumput dan daerah terbuka lainnya</item>
        <item>Padang rumput atau sabana</item>
    </string-array>
    <string name="dinosaurs_eats">Makanan</string>
    <string-array name="dinosaurs_length">
        <item>Sekitar 12 meter</item>
        <item>Sekitar 2 meter</item>
        <item>Sekitar 23 hingga 26 meter</item>
        <item>Sekitar 25 hingga 30 meter</item>
        <item>Sekitar 9 hingga 10 meter</item>
        <item>Sekitar 9 hingga 10 meter</item>
        <item>Sekitar 6 hingga 8 meter</item>
        <item>Sekitar 6 hingga 8 meter</item>
        <item>Sekitar 8 hingga 9 meter</item>
        <item>Sekitar 5 hingga 6 meter</item>
        <item>Sekitar 9 hingga 12 meter</item>
        <item>Sekitar 4 hingga 5 meter</item>
        <item>Sekitar 1,5 hingga 2 meter</item>
        <item>Sekitar 1,5 hingga 2 meter</item>
        <item>Sekitar 6 hingga 7 meter</item>
        <item>Sekitar 4,3 meter</item>
    </string-array>
    <string-array name="dinosaurs_long">
        <item>Sekitar 6 meter</item>
        <item>Sekitar 0.5 meter</item>
        <item>Sekitar 9 hingga 12 meter</item>
        <item>Sekitar 7 hingga 9 meter</item>
        <item>Sekitar 4 hingga 5 meter</item>
        <item>Sekitar 2.5 hingga 3 meter</item>
        <item>Sekitar 1.5 hingga 2 meter</item>
        <item>Sekitar 1.5 hingga 2 meter</item>
        <item>Sekitar 3 hingga 4 meter</item>
        <item>Sekitar 2.5 hingga 3 meter</item>
        <item>Sekitar 4 hingga 5 meter</item>
        <item>Sekitar 1 meter</item>
        <item>Sekitar 1 meter</item>
        <item>Sekitar 2 hingga 2.5 meter</item>
        <item> sekitar 2 hingga 2.5 meter</item>
        <item>Sekitar 2 meter</item>
    </string-array>
    <string name="dinosaurs_weigth">Bobot</string>
    <string-array name="dinosaurs_weak">
        <item>Lengan yang pendek dan mungkin kurang gesit dalam bergerak</item>
        <item>Ukuran kecil dan tidak sekuat predator besar lainnya</item>
        <item>Rentan terhadap predator karena ukurannya yang besar dan gerakan lamban.</item>
        <item>Rentan terhadap predator karena ukurannya yang besar dan gerakan lamban.</item>
        <item>Rentan terhadap predator karena ukurannya yang besar dan gerakan yang cenderung lambat.</item>
        <item>Rentan terhadap predator karena ukuran tubuhnya yang besar dan kemungkinan pergerakan yang kurang cepat.</item>
        <item>kecepatan dan manuverabilitas yang rendah karena tubuhnya yang besar dan berat.</item>
        <item>kecepatan dan manuverabilitas yang terbatas karena tubuhnya yang besar dan berat.</item>
        <item>kemungkinan rentan terhadap serangan predator yang dapat menyerang dari sisi atau belakang.</item>
        <item>entan terhadap serangan dari samping atau belakang karena tanduk dan lempeng tulang yang berfokus pada pertahanan di bagian depan.</item>
        <item>ukuran otak yang kecil, yang mungkin membuatnya kurang cerdas dalam menghindari bahaya atau merespons serangan predator dengan cepat.</item>
        <item>rentan terhadap serangan predator yang lebih besar karena ukurannya yang relatif kecil dan perlindungan yang terbatas.</item>
        <item>ukuran tubuh yang kecil dan perlindungan yang minim, membuat mereka rentan terhadap serangan predator.</item>
        <item>ukuran tubuh yang kecil dan perlindungan yang minim, membuat mereka rentan terhadap serangan predator.</item>
        <item>bentuk perlindungan fisik yang minim, membuatnya rentan terhadap serangan predator yang lebih besar dan lebih kuat.</item>
        <item>rentan terhadap predator yang menggunakan taktik pemangsaan berburu dalam kelompok atau kawanan.</item>
    </string-array>
</resources>